﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-11-09
	Added: Audio Volume Strategy 4 and 5. 4 is Decrease from Full, 5 is Increase from Mute. Volume is untouched otherwise.
	Changed: Internet failure should be less spammy.
	Internal: String handling changed.
### 2018-11-07
	Fixed: Exception handling in startup.
	Added: Multicore JIT profiling. This may speed up TM, especially for startup. First startup is unaffected.
### 2018-11-05
	Changed: Internal sanity checking reduced. We trust code that has not caused problems more.
	Changed: Trace output is no longer provided on non-debug builds.
	Changed: Console output disabled for non-debug versions.
	Internal: Removed several unused internal references (WindowsBase, System.Xaml, PresentationCore, PresentationFramework).
### 2018-10-31
	Fixed: Crash on last day of a month
	Fixed: Setting affinity strategy to ignored from force or limit in UI is now respected.
	Fixed: Watchlist formatting is now uniform whether you just started TM or modified a rule.
### 2018-10-22
	Fixed: Foreground only option did not prevent the app from being changed back by normal rescans, ignoring the foreground only option.
### 2018-10-13
	Added: Network interfaces now have copy full information option in context menu, which includes IPv4&IPv6 address and some traffic data.
### 2018-10-12
	Fixed: Altered foreground monitoring to no longer leak tiny amount of memory whenever an app that has foreground rules enabled
		closes down while in the foreground (most cases of normally exiting said apps).
	Changed: Memory log (used for displaying logs in the UI) is no longer static. This should not have any visible changes to users.
	Removed: Properties.Settings, it just didn't provide anything useful.
	Changed: How settings are saved.
		This may be buggy, such as not all settings being saved, this is mostly caused by uncertainty on how SharpConfig works.